@@ -1,3 +1,4 @@
+;; -*- Mode:Lisp -*-
 ;; @configure_input@
 ;;
 ;; Configuration file for ECL
@@ -104,12 +105,6 @@ Returns, as a string, the version of the software under which ECL runs."
 ;; * Set configuration pathnames. Notice the trailing slash!
 ;;   Otherwise it would not be a directory.
 ;;
-#-ecl-min
-(let ((path (si::get-library-pathname)))
-  (when path
-    (si::pathname-translations "SYS"
-                               `(("**;*.*" ,(merge-pathnames "**/*.*" path )))))
-);#-eclmin
 #-msvc
 (si::pathname-translations "HOME" '(("**;*.*" "~/**/*.*")))
 #+msvc
@@ -125,3 +120,15 @@ Returns, as a string, the version of the software under which ECL runs."
 	(t (setf x #+unix "/tmp" #-unix "./")))
   (si::pathname-translations "TMP"
      `(("**;*.*" ,(format nil "~A/**/*.*" x)))))
+
+#-ecl-min
+(macrolet ((define-pathname-translations (name base-pathname)
+             `(let ((path ,base-pathname))
+               (when path
+                 (si::pathname-translations
+                  ,name `(("**;*.*" ,(merge-pathnames "**/*.*" path))))))))
+  (define-pathname-translations "SYS" (si::get-library-pathname))
+  (let ((x (ext:getenv "ECLSRCDIR")))
+    (unless (and x (setq x (probe-file x)))
+      (setf x #.(truename "@top_srcdir@/../")))
+    (define-pathname-translations "SRC" x)))
